--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>Simple Game</h1>
+    <h1>Simple Games</h1>
     <div id="scoreboard">
         Score: <span id="score">0</span> | High Score: <span id="highScore">0</span>
     </div>
