Added radius to let

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Score: <span id="score">0</span> | High Score: <span id="highScore">0</span>
     </div>
     <p id="message">Game Over! Press Enter to restart.</p>
-    <canvas id="gameCanvas" width="1000" height="400"<img src="./games/car.webp">></canvas>
+    <canvas id="gameCanvas" width="1000" height="400"<img src="./games/car.webp" width="1000" height="400">></canvas>
     <script src="script.js"></script>
 
 </body>
